# gul

./: .gitignore  CMakeLists.txt  README.md  gen_codecov.sh
.github/workflows/: build_matrix.yml  codecov.yml  codeql.yml
include/ds/: all.hpp  byte.hpp  config.hpp  expected.hpp  fifo_map.hpp  functional.hpp  lru_map.hpp  optional.hpp  span.hpp  string_view.hpp  type_traits.hpp  utility.hpp
include/gul/: all.hpp  byte.hpp  config.hpp  expected.hpp  fifo_map.hpp  functional.hpp  fwd.hpp  invoke.hpp  lru_map.hpp  optional.hpp  out_ptr.hpp  span.hpp  string_view.hpp  tuple.hpp  type_traits.hpp  utility.hpp
include/gul/detail/: constructor_base.hpp  functional.hpp  out_ptr.hpp  type_traits.hpp  utility.hpp
include/gul/impl/: expected.ipp  optional.ipp
test/: CMakeLists.txt  byte_test.cpp  ds_test.h  dummy_test.cpp  expected_test.cpp  fifo_map_test.cpp  functional_test.cpp  gul_test.h  invoke_test.cpp  lru_map_test.cpp  optional_test.cpp  out_ptr_test.cpp  span_test.cpp  string_view_test.cpp  tuple_test.cpp  type_traits_test.cpp  utility_test.cpp
